mern-docker/k8s_with_atlas/devops_practice_1.yaml
# backend-deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ishrakadit07/mern-docker-api
          ports:
            - containerPort: 8000
---
# backend-service
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000 
      targetPort: 8000     
  type: ClusterIP 
---
# client-deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: ishrakadit07/mern-docker-web
          ports:
            - containerPort: 5173
---
# client-service
# k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: NodePort  # or LoadBalancer if you're using a cloud provider
  ports:
    - port: 5173
      targetPort: 5173
      protocol: TCP
      nodePort: 30001  # Optional: specify a node port
  selector:
    app: client
